; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_feed_byte.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_feed_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @feed_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @feed_byte(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %30

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %11, align 4
  %13 = icmp eq i32 %12, 5
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 2
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i32*, i32** %5, align 8
  store i32 2, i32* %21, align 4
  store i32 1, i32* %3, align 4
  br label %30

22:                                               ; preds = %17, %14
  %23 = load i32*, i32** %5, align 8
  store i32 1, i32* %23, align 4
  store i32 0, i32* %3, align 4
  br label %30

24:                                               ; preds = %10
  %25 = load i32, i32* %4, align 4
  %26 = icmp eq i32 %25, 9
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = load i32*, i32** %5, align 8
  store i32 5, i32* %28, align 4
  br label %29

29:                                               ; preds = %27, %24
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %22, %20, %9
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
